test/parallel/single/waynew/simple0.good
simple0.chpl:6: error: single var already defined
